# viator-plugin-template

./: .gitignore  CMakeLists.txt  README.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/DSP/: MidSideProcessor.h  ProcessBlock.h
source/Engine/Globals/: Globals.h
source/GUI/Components/: Header.cpp  Header.h  InfoPanel.h  LevelMeter.cpp  LevelMeter.h
source/GUI/LookAndFeel/: MenuLAF.h  TextButtonLAF.h  ThinDialLAF.h
source/GUI/Utils/: Colors.h  Fonts.h  Images.h
